# signal-spirit

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: domain.schema  signal-spirit.schema  signal.schema
schemas/v0.1.0/: schema.nota
src/: help.rs  instance_schema.rs  lib.rs  migration.rs
src/schema/: domain.rs  mod.rs  signal.rs
tests/: daemon_configuration.rs  dependency_boundary.rs  generated_contract.rs  help_instance_schema_convergence.rs  instance_schema.rs  migration.rs  round_trip.rs  short_header.rs  true_schema_nota_projection.rs  validation.rs
