[package]
name         = "signal-spirit"
version      = "0.12.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-spirit"
description  = "Signal contract for the ordinary spirit surface."
publish      = false
links        = "signal-spirit"
build        = "build.rs"

[lib]
name = "signal_spirit"
path = "src/lib.rs"

[features]
default = []
nota-text = [
    "dep:nota",
    "dep:schema",
    "signal-domain/nota-text",
    "signal-frame/nota-text",
    "version-projection/nota-text",
]

[dependencies]
signal-domain = { git = "https://github.com/LiGoldragon/signal-domain.git", rev = "3a1692693f7b842c024994b16523395732780f0a", default-features = false }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
nota    = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
schema  = { package = "schema", git = "https://github.com/LiGoldragon/schema.git", rev = "92bed64ad644ce4caa2827398ada5b7b79221165", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"
version-projection = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main", default-features = false }

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "a4b46ffffe5307eca3e1537539d0a70884955b4c" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
schema = { package = "schema", git = "https://github.com/LiGoldragon/schema.git", rev = "92bed64ad644ce4caa2827398ada5b7b79221165" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch."https://github.com/LiGoldragon/nota-next.git"]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
nota-derive = { package = "nota-derive", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }

[patch."https://github.com/LiGoldragon/schema-next.git"]
schema = { package = "schema", git = "https://github.com/LiGoldragon/schema.git", rev = "92bed64ad644ce4caa2827398ada5b7b79221165" }
schema-cc = { package = "schema-cc", git = "https://github.com/LiGoldragon/schema.git", rev = "92bed64ad644ce4caa2827398ada5b7b79221165" }

[patch."https://github.com/LiGoldragon/schema-rust-next.git"]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "a4b46ffffe5307eca3e1537539d0a70884955b4c" }
