[package]
name         = "signal-spirit"
version      = "0.13.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-spirit"
description  = "Signal contract for the ordinary spirit surface."
publish      = false
links        = "signal-spirit"
build        = "build.rs"

[lib]
name = "signal_spirit"
path = "src/lib.rs"

[features]
default = []
nota-text = [
    "dep:nota",
    "dep:schema-language",
    "signal-domain/nota-text",
    "signal-frame/nota-text",
    "version-projection/nota-text",
]

[dependencies]
signal-domain = { git = "https://github.com/LiGoldragon/signal-domain.git", rev = "36ba3904eaeb71a3e274219c5f3916c3c8e716cc", default-features = false }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
nota    = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
schema-language = { git = "https://github.com/LiGoldragon/schema-language.git", rev = "0ee452a4", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"
version-projection = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main", default-features = false }

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "6434c006672307565c991c7e476a6c75da59755f" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
schema-language = { git = "https://github.com/LiGoldragon/schema-language.git", rev = "0ee452a4" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch."https://github.com/LiGoldragon/nota-next.git"]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
nota-derive = { package = "nota-derive", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }

